--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.config.import=optional:configserver:
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+#Disable dafault springboot loggers
+#logging.pattern.console=
