Added Distributed Tracing concept - Sleuth, ZipKin, RabbitMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ eureka.client.fetch-registry=false
 
 #Disable dafault springboot loggers
 #logging.pattern.console=
+
+
+#If we want to ignore zipkin server connectivity enable below line
+#spring.zipkin.enabled=false
