--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		</dependency>
 		
 		<!-- Distributed Tracing(To generate unique id per each logger) - sleuth,RabbitMQ,ZipKin -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
+		</dependency> -->
 		
 
 		<dependency>
