--- a/src/main/resources/dockerfile/rabbit-docker-compose.yaml
+++ b/src/main/resources/dockerfile/rabbit-docker-compose.yaml
@@ -2,56 +2,63 @@ version: '3.5'
 
 services:
   apigateway:
-    image: kolludocker/apigateway-apigateway:0.0.2-phase4
-    mem_limit: 1024m
+    image: kolludocker/apigateway-apigateway:0.0.3-phase4
     ports:
       - "8765:8765"
     networks:
       - eurekaserver-network
     depends_on:
       - eurekaserver
-      - zipkin-server  
+      - rabbitmq  
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://eurekaserver:8761/eureka
       SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING.ZIPKIN_SENDER_TYPE: rabbit
     environment:
       - TZ="Asia/Kolkata"
       
   bankmodule:
-    image: kolludocker/bank-bankmodule:0.0.2-phase6
-    mem_limit: 10240m
+    image: kolludocker/bank-bankmodule:0.0.3-phase6
     ports:
       - "9096:9096"
     networks:
       - eurekaserver-network
     depends_on:
       - eurekaserver
-      - zipkin-server
+      - rabbitmq
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://eurekaserver:8761/eureka
+    environment:
       SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING.ZIPKIN_SENDER_TYPE: rabbit
     environment:
       - TZ="Asia/Kolkata"
       
   customermodule:
-    image: kolludocker/customer-customermodule:0.0.2-phase6
-    mem_limit: 1024m
+    image: kolludocker/customer-customermodule:0.0.3-phase6
     ports:
       - "9095:9095"
     networks:
       - eurekaserver-network
     depends_on:
       - eurekaserver
-      - zipkin-server
+      - rabbitmq
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://eurekaserver:8761/eureka
-      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/  
+      environment:
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING.ZIPKIN_SENDER_TYPE: rabbit 
     environment:
       - TZ="Asia/Kolkata"
              
   eurekaserver:
-    image: kolludocker/eurekaserver-eurekaserver:0.0.2-phase3
-    mem_limit: 1024m
+    image: kolludocker/eurekaserver-eurekaserver:0.0.3-phase3
     ports:
       - "8761:8761"
     networks:
@@ -60,14 +67,27 @@ services:
       - TZ="Asia/Kolkata"
       
   zipkin-server:
-    image: kolludocker/openzipkin/zipkin:2.23
-    mem_limit: 1024m
+    image: openzipkin/zipkin:2.23
     ports:
       - "9411:9411"
     networks:
       - eurekaserver-network
+    depends_on:
+      - rabbitmq
     environment:
       - TZ="Asia/Kolkata"
+    environment:
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672 
+       
+  rabbitmq:
+    image: rabbitmq:3.5.3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - eurekaserver-network
+    environment:
+      - TZ="Asia/Kolkata"    
       
 networks:
   eurekaserver-network:
