--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=eurekaserver
 server.port=8761
 
-eureka.client.service-url.defaultZone=http://172.20.10.3:8761/eureka
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://172.20.0.3:8761/eureka
 spring.config.import=optional:configserver:
 
 eureka.client.register-with-eureka=false
